--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!-- this site was created by Jason Chen using Webflow -->
-<!--  Last Published: Thu Mar 29 2018 01:26:51 GMT+0000 (UTC)  -->
+<!--  This site was created in Webflow. http://www.webflow.com  -->
+<!--  Last Published: Thu Apr 19 2018 00:22:08 GMT+0000 (UTC)  -->
 <html data-wf-page="5ab7f4dd1f3370c225d68a8c" data-wf-site="5ab7f4dd1f33709e23d68a8b">
 <head>
   <meta charset="utf-8">
@@ -20,7 +20,13 @@
 </head>
 <body class="body">
   <div class="hero-section desktop">
-    <div data-poster-url="background.jpg" data-video-urls="background.webm,background.mp4" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video-2 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;background.jpg&quot;)" data-wf-ignore="true"><source src="background.webm" data-wf-ignore="true"><source src="background-transcode.mp4" data-wf-ignore="true"></video>
+    <div class="html-embed-2 w-embed"><video autoplay="" loop="" style="min-width:100%; min-height:100%;" poster="/images/background.jpg">
+  <source src="background.mp4" type="video/mp4">
+  <source src="background.webm" type="video/webm">
+  <source src="background.ogv" type="video/ogg">
+  <img src="background.jpg">
+</video></div>
+    <div data-poster-url="videos/background.jpg" data-video-urls="videos/background.webm,videos/background.mp4" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video-2 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;videos/background-poster-00001.jpg&quot;)" data-wf-ignore="true"><source src="videos/background.webm" data-wf-ignore="true"><source src="videos/background.mp4" data-wf-ignore="true"></video>
       <div class="top-download-link"><a href="download-maxsearch.html" class="button new_button w-button">Try MAXSearch</a></div>
       <div class="banner-top">
         <div class="logo"><img src="images/MAXSEARCH-LOGO-WEB_2.png" class="image">
@@ -111,7 +117,7 @@
     <div class="footnote">© Copyright 2017 - 2018 MAXSET WORLDWIDE INC  |   ALL RIGHTS RESERVED    |  MAXSearch ™, MAXSET WORLDWIDE INC.</div>
     <div class="terms-and-condition">Privacy Policy | Terms and Conditions</div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" intergrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
