--- a/download-maxsearch-copy.html
+++ b/download-maxsearch-copy.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Mar 29 2018 01:26:51 GMT+0000 (UTC)  -->
+<!--  Last Published: Thu Apr 19 2018 00:22:08 GMT+0000 (UTC)  -->
 <html data-wf-page="5ab98cdc60e600353acf0cbc" data-wf-site="5ab7f4dd1f33709e23d68a8b">
 <head>
   <meta charset="utf-8">
@@ -69,7 +69,7 @@
     <div class="footnote">© Copyright 2017 - 2018 MAXSET WORLDWIDE INC  |   ALL RIGHTS RESERVED    |  MAXSearch ™, MAXSET WORLDWIDE INC.</div>
     <div class="terms-and-condition">Privacy Policy | Terms and Conditions</div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" intergrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
